Mise en forme des notesbook en trois parties

--- a/fairness.ipynb
+++ b/fairness.ipynb
@@ -14,9 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": []
    },
    "outputs": [
     {
@@ -41,9 +42,14 @@
     "\n",
     "Pour mesurer la partialité d'un algorithme plusieurs métriques ont été proposées. La parité démographique, la parité proportionnelle et l'égalité des chances sont les plus communes pour évaluer la partialité sur les variables sensibles comme le sex ou la nationalité lorsque le modèle est un classifieur binaire. Il existe un très grands nombre d'autre métiques qui dépendent de la matrice de confusion. \n",
     "\n",
-    "Pour illustrer cela nous allons utilisé dans un premier temps les calculers avec les formules explicites puis nous utiliserons la librairie : *AI Fairness 360*.\n",
-    "\n",
-    "## Prépration des données et création du modèle cible"
+    "Pour illustrer cela nous allons utilisé dans un premier temps les calculers avec les formules explicites puis nous utiliserons la librairie : *AI Fairness 360*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prépration des données et création du modèle cible (n'apparaitera pas dans le notebook mais dans le german scoring notebook)"
    ]
   },
   {
@@ -63,7 +69,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import OneHotEncoder, FunctionTransformer\n",
     "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, plot_confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score, plot_confusion_matrix\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline"
    ]
@@ -121,7 +127,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Utilisation de la matrice de confusion\n",
+    "# Les femmes sont déscriminées\n",
+    "\n",
+    "## Définition de la *fairness*\n",
+    "\n",
+    "## Description générale des indicateurs de *fairness*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utilisation de la matrice de confusion\n",
     "\n",
     "La majorité des mesures de partialité sont basées sur la matrice de confusion. Elle comporte quatre classes :\n",
     " - Vrai positif (VP) : la vraie classe est 1 et la classe prédite est 1\n",
@@ -135,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "code_folding": true
+   },
    "outputs": [
     {
      "data": {
@@ -156,8 +175,22 @@
     "                             X_test,\n",
     "                             y_test,\n",
     "                             cmap=plt.cm.Blues)\n",
-    "disp.ax_.set_title(title)\n",
+    "ax = disp.ax_.set_title(title)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Présentation de l'arbre d'Aquiteas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://www.datasciencepublicpolicy.org/wp-content/uploads/2021/04/Fairness-Full-Tree.png"
    ]
   },
   {
@@ -347,169 +380,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Post Processing"
+    "# Comment mitiger les risques de discrimination\n",
+    "\n",
+    "## Présentation des trois grandes familles \n",
+    "\n",
+    "### Pre-Processing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://www.datasciencepublicpolicy.org/wp-content/uploads/2021/04/Fairness-Full-Tree.png"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from aif360.algorithms.postprocessing import CalibratedEqOddsPostprocessing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cpp = CalibratedEqOddsPostprocessing(unprivileged_groups=[{'sex': 1}], \n",
-    "                                   privileged_groups=[{'sex': 0}],\n",
-    "                                   cost_constraint='fpr')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cpp = cpp.fit(bld_test, bld_test_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bld_test_pred = cpp.predict(bld_test_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fairness_metrics = ClassificationMetric(bld_test, bld_test_pred, \n",
-    "                         unprivileged_groups=[{'sex': 1}], privileged_groups=[{'sex': 0}])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1338888888888889"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fairness_metrics.average_odds_difference()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.05882352941176472"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fairness_metrics.statistical_parity_difference()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.010000000000000009"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fairness_metrics.true_positive_rate_difference()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.072072072072072"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fairness_metrics.disparate_impact()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.735"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fairness_metrics.accuracy()"
+    "### In-Processing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pre Processing"
+    "### Post-Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implémentation des méthodes\n",
+    "\n",
+    "### Pre-processing : *Reweight*"
    ]
   },
   {
@@ -553,70 +451,20 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_output"
+    ]
+   },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "bld_train = BinaryLabelDataset(df=pd.concat([X_train_proc, y_train], axis=1),\n",
     "                                                label_names=['default'], \n",
     "                                                protected_attribute_names=['sex'],\n",
-    "                                                favorable_label=0, unfavorable_label=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bld_train = rw.fit_transform(bld_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w_train = bld_train.instance_weights.ravel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('preprocession',\n",
-       "                 ColumnTransformer(transformers=[('cat',\n",
-       "                                                  OneHotEncoder(drop='first'),\n",
-       "                                                  ['account_check_status',\n",
-       "                                                   'credit_history', 'purpose',\n",
-       "                                                   'savings',\n",
-       "                                                   'present_emp_since',\n",
-       "                                                   'personal _status',\n",
-       "                                                   'other_debtors', 'property',\n",
-       "                                                   'other_installment_plans',\n",
-       "                                                   'housing', 'job',\n",
-       "                                                   'telephone',\n",
-       "                                                   'foreign_worker']),\n",
-       "                                                 ('ord', StandardScaler(),\n",
-       "                                                  ['duration_in_month',\n",
-       "                                                   'credit_amount',\n",
-       "                                                   'installment_as_income_perc',\n",
-       "                                                   'present_res_since', 'age',\n",
-       "                                                   'credits_this_bank',\n",
-       "                                                   'people_under_maintenance'])])),\n",
-       "                ('logreg', LogisticRegression())])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "                                                favorable_label=0, unfavorable_label=1)\n",
+    "bld_train = rw.fit_transform(bld_train)\n",
+    "w_train = bld_train.instance_weights.ravel()\n",
     "model.fit(X_train, y_train, logreg__sample_weight = w_train)"
    ]
   },
@@ -637,7 +485,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "bld_test_pred = BinaryLabelDataset(df=pd.concat([y_test_pred, sex_test], axis=1),\n",
     "                                                label_names=['defaut'], \n",
     "                                                protected_attribute_names=['sex'],\n",
@@ -759,6 +606,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In-processing : ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Post-processing : *Calibrated Equal Odds*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aif360.algorithms.postprocessing import CalibratedEqOddsPostprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpp = CalibratedEqOddsPostprocessing(unprivileged_groups=[{'sex': 1}], \n",
+    "                                   privileged_groups=[{'sex': 0}],\n",
+    "                                   cost_constraint='fpr')\n",
+    "cpp = cpp.fit(bld_test, bld_test_pred)\n",
+    "\n",
+    "bld_test_pred = cpp.predict(bld_test_pred)\n",
+    "\n",
+    "fairness_metrics = ClassificationMetric(bld_test, bld_test_pred, \n",
+    "                         unprivileged_groups=[{'sex': 1}], privileged_groups=[{'sex': 0}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1338888888888889"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fairness_metrics.average_odds_difference()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05882352941176472"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fairness_metrics.statistical_parity_difference()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.010000000000000009"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fairness_metrics.true_positive_rate_difference()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.072072072072072"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fairness_metrics.disparate_impact()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.735"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fairness_metrics.accuracy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Critique de la partie 2 et recommendations\n",
+    "\n",
+    "## Compromis \n",
+    " - Est-ce que les hommes sont lésés par ces méthodes ?\n",
+    " - Est-ce que ces méthodes sont beaucoup plus longues ?\n",
+    " \n",
+    "## Ouverture "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -768,7 +768,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,Rmd"
+   "formats": "ipynb,Rmd,py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3",
