--- a/fairness.ipynb
+++ b/fairness.ipynb
@@ -35,6 +35,119 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js\"></script>\n",
+       "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js\"></script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.config({\n",
+       "    paths: {\n",
+       "        datatables: 'https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min',\n",
+       "    }\n",
+       "});\n",
+       "\n",
+       "$('head').append('<link rel=\"stylesheet\" type=\"text/css\" \\\n",
+       "                href = \"https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css\" > ');\n",
+       "\n",
+       "$('head').append('<style> table td { text-overflow: ellipsis; overflow: hidden; } </style>');\n",
+       "\n",
+       "$('head').append(`<script>\n",
+       "function eval_functions(map_or_text) {\n",
+       "    if (typeof map_or_text === \"string\") {\n",
+       "        if (map_or_text.startsWith(\"function\")) {\n",
+       "            try {\n",
+       "                // Note: parenthesis are required around the whole expression for eval to return a value!\n",
+       "                // See https://stackoverflow.com/a/7399078/911298.\n",
+       "                //\n",
+       "                // eval(\"local_fun = \" + map_or_text) would fail because local_fun is not declared\n",
+       "                // (using var, let or const would work, but it would only be declared in the local scope\n",
+       "                // and therefore the value could not be retrieved).\n",
+       "                const func = eval(\"(\" + map_or_text + \")\");\n",
+       "                if (typeof func !== \"function\") {\n",
+       "                    // Note: backquotes are super convenient!\n",
+       "                    // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals\n",
+       "                    console.error(\"Evaluated expression \" + map_or_text + \" is not a function (type is \" + typeof func + \")\");\n",
+       "                    return map_or_text;\n",
+       "                }\n",
+       "                // Return the function\n",
+       "                return func;\n",
+       "            } catch (e) {\n",
+       "                // Make sure to print the error with a second argument to console.error().\n",
+       "                console.error(\"itables was not able to parse \" + map_or_text, e);\n",
+       "            }\n",
+       "        }\n",
+       "    } else if (typeof map_or_text === \"object\") {\n",
+       "        if (map_or_text instanceof Array) {\n",
+       "            // Note: \"var\" is now superseded by \"let\" and \"const\".\n",
+       "            // https://medium.com/javascript-scene/javascript-es6-var-let-or-const-ba58b8dcde75\n",
+       "            const result = [];\n",
+       "            // Note: \"for of\" is the best way to iterate through an iterable.\n",
+       "            // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/for...of\n",
+       "            for (const item of map_or_text) {\n",
+       "                result.push(eval_functions(item));\n",
+       "            }\n",
+       "            return result;\n",
+       "\n",
+       "            // Alternatively, more functional approach in one line:\n",
+       "            // return map_or_text.map(eval_functions);\n",
+       "        } else {\n",
+       "            const result = {};\n",
+       "            // Object.keys() is safer than \"for in\" because otherwise you might have keys\n",
+       "            // that aren't defined in the object itself.\n",
+       "            //\n",
+       "            // See https://stackoverflow.com/a/684692/911298.\n",
+       "            for (const item of Object.keys(map_or_text)) {\n",
+       "                result[item] = eval_functions(map_or_text[item]);\n",
+       "            }\n",
+       "            return result;\n",
+       "        }\n",
+       "    }\n",
+       "\n",
+       "    return map_or_text;\n",
+       "}\n",
+       "\n",
+       "</` + 'script>');"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML, display\n",
+    "from time import sleep\n",
+    "\n",
+    "display(HTML(\"\"\"\n",
+    "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js\"></script>\n",
+    "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js\"></script>\n",
+    "\"\"\"))\n",
+    "\n",
+    "sleep(0.1)\n",
+    "\n",
+    "from itables import init_notebook_mode\n",
+    "init_notebook_mode(all_interactive=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,77 +163,6 @@
    "metadata": {},
    "source": [
     "# Prépration des données et création du modèle cible (n'apparaitera pas dans le notebook mais dans le german scoring notebook)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "from tqdm.notebook import tqdm\n",
-    "from copy import deepcopy\n",
-    "\n",
-    "from sklearn import model_selection\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import OneHotEncoder, FunctionTransformer\n",
-    "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
-    "from sklearn.metrics import accuracy_score, plot_confusion_matrix\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seed = 2021"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "credit = pd.read_csv(\"data/german_credit_prepared.csv\", sep=\",\", engine=\"python\")\n",
-    "\n",
-    "y = credit.default \n",
-    "X = credit.drop(columns=[\"default\"])\n",
-    "\n",
-    "# Définie quelles colones sont categorielles et quelles sont continue\n",
-    "variables_cat = [col for col in X.columns if credit[col].dtype==object]\n",
-    "variables_ord = [col for col in X.columns if credit[col].dtype==int]\n",
-    "\n",
-    "preprocess = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        ('cat', OneHotEncoder(drop='first'), variables_cat),\n",
-    "        ('ord', StandardScaler(), variables_ord)\n",
-    "    ])\n",
-    "\n",
-    "model = Pipeline(\n",
-    "        [\n",
-    "            ('preprocession', preprocess),\n",
-    "            ('logreg', LogisticRegression())\n",
-    "        ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = model_selection.train_test_split(X, y, test_size=0.20, random_state=seed)\n",
-    "\n",
-    "logreg = model.fit(X_train, y_train)"
    ]
   },
   {
