--- a/fairness.ipynb
+++ b/fairness.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -236,8 +236,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>test</th>\n",
-       "      <th>pred</th>\n",
+       "      <th>default</th>\n",
        "      <th>sex</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -246,17 +245,14 @@
        "      <th>297</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>333</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>920</th>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -265,25 +261,26 @@
        "</div>"
       ],
       "text/plain": [
-       "     test  pred  sex\n",
-       "297     0     0    0\n",
-       "333     0     0    1\n",
-       "920     0     0    1"
+       "     default  sex\n",
+       "297        0    0\n",
+       "333        1    1\n",
+       "920        0    1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_test = pd.Series(model.predict(X_test), index=X_test.index, name='test')\n",
-    "y_pred = pd.Series(y_test, index=X_test.index, name='pred')\n",
+    "y_test = pd.Series(y_test, index=X_test.index, name='default')\n",
+    "y_pred = pd.Series(model.predict(X_test), index=X_test.index, name='default')\n",
     "sex_bin = X_test.sex.map({'male': 0, 'female': 1})\n",
     "\n",
-    "results = pd.concat([y_test, y_pred, sex_bin], axis=1)\n",
+    "results_test = pd.concat([y_test, sex_bin], axis=1)\n",
+    "results_pred = pd.concat([y_pred, sex_bin], axis=1)\n",
     "\n",
-    "results.head(3)"
+    "results_test.head(3)"
    ]
   },
   {
@@ -295,18 +292,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bld_test = BinaryLabelDataset(df=results,\n",
-    "                              label_names=['test'], \n",
+    "bld_test = BinaryLabelDataset(df=results_test,\n",
+    "                              label_names=['default'], \n",
     "                              protected_attribute_names=['sex'],\n",
     "                              favorable_label=0, \n",
     "                              unfavorable_label=1)\n",
     "\n",
-    "bld_pred = BinaryLabelDataset(df=results,\n",
-    "                              label_names=['pred'], \n",
+    "bld_pred = BinaryLabelDataset(df=results_pred,\n",
+    "                              label_names=['default'], \n",
     "                              protected_attribute_names=['sex'],\n",
     "                              favorable_label=0, \n",
     "                              unfavorable_label=1)"
@@ -321,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +351,7 @@
        "-0.14944444444444446"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +379,7 @@
        "-0.19117647058823528"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,16 +397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.16000000000000003"
+       "0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +434,7 @@
        "0.7657657657657658"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.755"
+       "1.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +849,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,Rmd,py:percent"
+   "formats": "ipynb,Rmd,auto:percent"
   },
   "kernelspec": {
    "display_name": "Python 3",
